Fix alignment issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,8 @@
   font-weight: bold;
 }
 
-.nav-link, .dropdown-item {
+.nav-link,
+.dropdown-item {
   font-size: 1.5rem;
 }
 
@@ -82,7 +83,7 @@
 }
 
 #left-side {
-  justify-content:flex-end ;
+  justify-content: flex-end;
 }
 
 #right-side {
@@ -115,7 +116,7 @@
   width: 40.5rem;
 }
 
-.image-container img{
+.image-container img {
   margin-top: 1rem;
   width: 4.5rem;
   height: auto;
@@ -166,8 +167,8 @@
 }
 
 .content {
-  margin-top: 16rem;
-  margin-left: 3rem;
+  margin-top: 15.5rem;
+  margin-left: 2rem;
   position: relative;
   max-width: 550px;
   display: none;
@@ -200,7 +201,8 @@
 
 .banner .carousel-box {
   position: relative;
-  min-width: 950px;
+  min-width: 55%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -213,18 +215,20 @@
 
 .carousel {
   position: relative;
-  height: 550px;
+  width: 100%;
   perspective: 1000px;
 }
 
 .carousel .carousel-item {
-  width: 250px;
+  width: 28%;
   cursor: pointer;
+  float: left;
+  padding: 1%;
 }
 
 .carousel .carousel-item img {
-  max-width: 235px;
-  transform: translateX(8px) translateY(-100px);
+  max-width: 100%;
+  transform: translateX(8px) translateY(-25%);
   object-fit: cover;
   object-position: center;
 }
